[package]
name = "porto"
edition = "2021"
version = "0.1.0"
rust-version = "1.83"
homepage = "https://github.com/thigcampos/porto"
repository = "https://github.com/thigcampos/porto"
authors = ["Thiago Campos <commit@thigcampos.com>"]
description = "Porto - Yet another dotfiles manager"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }

[profile.release]
lto = true 
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
